--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "convex": "^1.17.0",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-textarea-autosize": "^8.5.5",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
