--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.19.2",
+    "@blocknote/mantine": "^0.19.2",
+    "@blocknote/react": "^0.19.2",
     "@clerk/clerk-react": "^5.15.2",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
